src/blocks/common.blocks/menu-list/_type/menu-list_type_default.css
.menu-list_type_default
{
    min-width: 150px;
    max-width: 300px;

    flex: 1 0 auto;
}

.menu-list_type_default .menu-list__link
{
    padding: 8px 12px 7px 12px;

    transition: background .4s ease;

    color: #333;
}

.menu-list_type_default .menu-list__link:hover
{
    background: rgba(255,235,160,.35);
}

.menu-list_type_default .menu-list__link_active
{
    cursor: default;

    background: #ffeba0;
}

.menu-list_type_default .menu-list__title
{
    font-size: 12px;

    position: relative;

    box-sizing: border-box;
    margin-top: 5px;
    padding: 15px 12px 7px 12px;

    white-space: nowrap;
    text-transform: uppercase;
    letter-spacing: 1px;

    color: #999;
}

.menu-list_type_default .menu-list__group:first-child .menu-list__title
{
    margin-top: 0;
    padding-top: 10px;
}

.menu-list_type_default .menu-list__title::before
{
    position: absolute;
    top: 0;
    right: 0;
    left: 0;

    height: 1px;

    content: '';

    background: -webkit-linear-gradient(left,  rgba(0,0,0,0.15) 20%,#fff 100%);
    background: linear-gradient(to right,  rgba(0,0,0,0.15) 20%,#fff 100%);
}

.menu-list_type_default .menu-list__delimeter
{
    margin: 5px 0;

    background: -webkit-linear-gradient(left,  rgba(0,0,0,0.15) 20%,#fff 100%);
    background: linear-gradient(to right,  rgba(0,0,0,0.15) 20%,#fff 100%);
}

/* (Begin) Menu-list with select */
.menu-list_type_default .menu-list__group-select
{
    display: flex;

    transition: background .4s ease;
}

.menu-list_type_default .menu-list__group-select:hover
{
    background: rgba(255,235,160,.35);
}

.menu-list_type_default .menu-list__group-select_active_yes
{
    background: #ffeba0;
}

.menu-list_type_default .menu-list__group-select .menu-list__link,
.menu-list_type_default .menu-list__group-select .menu-list__link:hover
{
    background: none;
}
/* (Begin) Menu-list with select */

